--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ theme = "hugo-xmin"
 # googleAnalytics = ""
 # disqusShortname = ""
 # ignore blogdown related files
-ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$", "\\.csv$", "\\.R$", "\\.gv$", "\\.png", "README.md"]
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$", "\\.csv$", "\\.R$", "\\.gv$", "\\.png", "README.md", "_bookdown.yml"]
 # enable gitinfo for publish date
 enableGitInfo = true
 # misc settings
