Add reference submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/hugo-xmin"]
 	path = themes/hugo-xmin
 	url = https://github.com/iquizoo/hugo-xmin
+[submodule "content/post/refs"]
+	path = content/post/refs
+	url = https://github.com/psychelzh/lit-refs
