--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ theme = "hugo-xmin"
 # googleAnalytics = ""
 # disqusShortname = ""
 # ignore blogdown related files
-ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$", "\\.csv$", "\\.R$", "\\.gv$", "README.md", "_bookdown.yml"]
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$", "\\.csv$", "\\.R$", "\\.gv$", "README.md", "_bookdown.yml", "\\.bib", "LICENSE"]
 # enable gitinfo for publish date
 enableGitInfo = true
 # disable "taxonomyTerm" because there is no need for a separated term page
