--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "content/post/refs"]
 	path = data/refs
 	url = https://github.com/psychelzh/lit-refs
+[submodule "static/axure-rp-design"]
+	path = static/axure-rp-design
+	url = https://github.com/iquizoo/axure-rp-design
