Move sources files to a proper folder

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = themes/hugo-xmin
 	url = https://github.com/iquizoo/hugo-xmin
 [submodule "data/refs"]
-	path = data/refs
+	path = content/resources/refs
 	url = https://github.com/psychelzh/lit-refs
