Add TZ environment to make sure time zone consistency

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,9 @@
 publish = "public"
 command = "hugo"
 
+[build.environment]
+TZ = "Asia/Shanghai"
+
 [context.production.environment]
 HUGO_VERSION = "0.41"
 HUGO_ENV = "production"
