Add `.nojekyll` to the published site

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
 - Rscript -e 'blogdown::install_hugo()'
 script:
 - Rscript -e 'blogdown::build_site()'
+- touch public/.nojekyll
 deploy:
   provider: pages
   skip-cleanup: true
