--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # site is now majorly hosted on https://www.netlify.com/
-baseurl = "http://iquizoo.netlify.com/"
+baseurl = "https://iquizoo.netlify.com/"
 # use Chinese languages
 languageCode = "zh-CN"
 hasCJKLanguage = true
